--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ aiogram==3.21.0
 fastapi==0.116.1
 uvicorn[standard]==0.35.0
 pydantic==2.11.7
+python-telegram-bot[webhooks]==22.3
+python-dotenv==1.1.1
