--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ uvicorn[standard]==0.35.0
 pydantic==2.11.7
 python-telegram-bot[webhooks]==22.3
 python-dotenv==1.1.1
-asyncio 4.0.0
+asyncio==4.0.0
+
